--- a/index.html
+++ b/index.html
@@ -2,6 +2,46 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link href="api.openweathermap.org/data/2.5/weather?q={city name}&appid={API key}" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/js/script.js">
+    <title>Weather Dashboard</title>
 </head>
+
+<body>
+    <!--title banner-->
+    <header class="hero">
+        <h1 class="text-center">Weather Dashboard</h1>
+    </header>
+
+    <main class="container">
+        <!--search form-->
+        <div class="row">
+        <div class="col-3">
+            <div class="card">
+              <h3 class="card-header">Search for a City:</h3>
+              <form id="user-form" class="card-body">
+                <label class="form-label" for="city-name"></label>
+                <input name="city-name" id="city-name" type="text" autofocus="true" class="form-input" />
+                <button type="submit" class="btn">Search</button>
+              </form>
+            </div>
+        </div>
+            <div class="col-9">
+                [CURRENT WEATHER]
+                <div id="current-weather"></div>
+            </div>
+        </div>
+
+        <div class="row justify-content-end">
+            <div class="col-9">
+                5-Day Forecast
+                <div id="five-day"></div>
+            </div>
+        </div>
+    </main>
+</body>
