--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link href="api.openweathermap.org/data/2.5/weather?q={city name}&appid={API key}" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/js/script.js">
     <title>Weather Dashboard</title>
 </head>
 
@@ -43,5 +41,7 @@
                 <div id="five-day"></div>
             </div>
         </div>
+
+        <script src="./assets/js/script.js"></script>
     </main>
 </body>
