added to js file

--- a/index.html
+++ b/index.html
@@ -21,17 +21,21 @@
         <div class="row">
         <div class="col-3">
             <div class="card">
-              <h3 class="card-header">Search for a City:</h3>
-              <form id="user-form" class="card-body">
-                <label class="form-label" for="city-name"></label>
-                <input name="city-name" id="city-name" type="text" autofocus="true" class="form-input" />
-                <button type="submit" class="btn">Search</button>
-              </form>
+                <h3 class="card-header">Search for a City:</h3>
+                <form id="user-form" class="card-body">
+                    <label class="form-label" for="city-name"></label>
+                    <input name="city-name" id="city-name" type="text" autofocus="true" class="form-input" />
+                    <button type="submit" class="btn">Search</button>
+                </form>
             </div>
         </div>
             <div class="col-9">
-                [CURRENT WEATHER]
-                <div id="current-weather"></div>
+                <div id="current-weather">
+                    <p>Temp:</p>
+                    <p>Wind:</p>
+                    <p>Humidity:</p>
+                    <p>UV Index:</p>
+                </div>
             </div>
         </div>
 
